Fixed overflow of main-window

--- a/src/client/css/app.css
+++ b/src/client/css/app.css
@@ -7,6 +7,7 @@ body {
 	color: #FFFFFF;
 	font-size: 14px;
 	letter-spacing: 0.5px;
+  overflow: hidden;
 }
 
 html {
